--- a/resume.html
+++ b/resume.html
@@ -171,7 +171,7 @@
 						</ul>
 					</div>
 					<ul>
-						<li class="list list-fl" style="margin: 0 4% 0 1%;">
+						<li class="list list-fl">
 							<ul>
 								<li class="list-children">
 									<div class="triangle-down-left"></div>
@@ -190,9 +190,6 @@
 										熟练使用CSS对网页进行（自适应）布局，了解不同浏览器的兼容性。对动画特效有一定的理解。
 									</p>
 								</li>
-
-
-
 								<li class="list-children">
 									<div class="triangle-down-left"></div>
 									<div class="children-img"></div>
@@ -211,7 +208,7 @@
 								</li>
 							</ul>
 						</li>
-						<li class="list list-fr" style="margin: 30px 1% 0 4%;">
+						<li class="list list-fr">
 							<ul>
 								<li class="list-children">
 									<div class="triangle-down-right"></div>
@@ -368,9 +365,6 @@
 	        	<div class="title">CONTACT</div>
 	        	<p class="thank-text">感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
 	        	<div class="contact-content">
-
-
-
 					<div class="contact-list-warp">
 						<div class="arrow-box">
 							Useful Info
