--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="前端求职简历">
 	<meta name="keywords" content="HTML, CSS, JavaScript, 前端开发, 求职">
 	<title>简历|唐海伟|WEB前端</title>
-	<!-- <link rel="shortcut icon" href="img/ico.ico"> -->
+	<link rel="shortcut icon" href="img/ico.ico">
 	<link rel="stylesheet" href="css/iconfont/iconfont.css">
 	<link rel="stylesheet" href="css/resume.css">
 	<link rel="stylesheet" href="css/jquery.fullpage.min.css">
