--- a/resume.html
+++ b/resume.html
@@ -133,7 +133,8 @@
 						</div>
 
 						<div class="self-description">
-							<p class="hide">好奇心是学习的动力，学习是一个非常愉快的过程。从摄影接触到设计，通过设计又了解到前端。目前已经把所有精力投入到了前端开发中。</p>
+							<p class="hide">好奇心是学习的动力，学习是一个非常愉快的过程。前端的学习需要持之以恒，知识深度与广度都很重要。而前端开发的重中之重就是原生javascript的理解，而如今的思路必需有模块化，组件化，工程化。
+</p>
 <p>大前端的概念深入我心。将更多的业务逻辑放在前端中，这很有趣。同时，将自己构想的内容实现出来，这种感觉很愉快，而且充满成就感。</p>
 						</div>
 
@@ -239,7 +240,7 @@
 									<div class="children-img"></div>
 									<h2 class="children-title">WEBPACK</h2>
 									<p class="children-text">
-										这个是比较难配置，目前只能做到基础入门。
+										这个是比较难配置，目前只能满足正常的日常应用。
 									</p>
 								</li>
 								<li class="list-children">
@@ -417,7 +418,8 @@
 	     <div class="section">
 	        <div class="contact">
 	        	<div class="title">CONTACT</div>
-	        	<p class="thank-text">感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
+	        	<p class="thank-text">行路有良友，便是捷径。<br>带上我吧，一起看到更大的世界！
+</p>
 	        	
 	        	<div class="contact-content">
 					<div class="contact-list-warp">
