--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@
 				<div class="about-me-content ">
 					<div class="about-img">
 						<div class="mask">
-							<a href="http://op5e32hmc.bkt.clouddn.com/%E5%94%90%E6%B5%B7%E4%BC%9F-H5-%E4%B8%9C%E8%8E%9E-1%E5%B9%B4.doc" class="iconfont download" title="下载简历">&#xe629;</a><br>
+							<a href="http://op5e32hmc.bkt.clouddn.com/%E5%94%90%E6%B5%B7%E4%BC%9F-H5-%E4%B8%9C%E8%8E%9E-1%E5%B9%B4.doc?attname=" class="iconfont download" title="下载简历">&#xe629;</a><br>
 						</div>
 					</div>
 					<div class="about-info">
